--- a/package.json
+++ b/package.json
@@ -9,18 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-query": "^5.62.16",
+    "@wix/ecom": "^1.0.886",
+    "@wix/media": "^1.0.141",
+    "@wix/members": "^1.0.151",
+    "@wix/redirects": "^1.0.70",
+    "@wix/reviews": "^1.0.49",
+    "@wix/sdk": "^1.15.7",
+    "@wix/stores": "^1.0.340",
+    "date-fns": "^4.1.0",
+    "js-cookie": "^3.0.5",
+    "ky": "^1.7.4",
+    "next": "15.0.2",
+    "next-themes": "^0.4.4",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "next": "15.0.2"
+    "react-medium-image-zoom": "^5.2.13"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/eslint-plugin-query": "^5.62.16",
+    "@tanstack/react-query-devtools": "^5.62.16",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.2"
+    "eslint-config-next": "15.0.2",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
